--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +9,26 @@
         <link rel="stylesheet" href="resources/css/style.css" />
     </head>
     <body>
+        <h1>Discover hidden places in the world around you</h1>
+        <p><a href="#">Download Excursion (Coming soon!)</a></p>
+        <p>
+            <video autoplay muted loop>
+                <source src="resources/videos/excursion.mp4" type="video/mp4" />
+            </video>
+        </p>
 
+        <h2>Your personal travel guide</h2>
+        <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+
+        <p><img src="resources/images/landscape.jpg" /></p>
+        <p><img src="resources/images/phone.png" /></p>
+
+        <h2>Coming Soon for iPhone and Android</h2>
+        <a href="#">Download Excursion (Coming soon!)</a>
+        
+        <footer>
+            <p class="footer">© Excursion</p>
+        </footer>
     </body>
+    
 </html>
